Style/Fix/Test changes: Privacy policy and terms and conditions were not styled correctly, new styles and spacing added to both forms.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1131,6 +1131,22 @@ a.button{
     font-weight: 500;
 }
 
+/*----Terms and Conditions/Privacy Policy------*/
+
+.legal-form{
+    margin: 3rem 0;
+}
+
+.legal-form h2{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.legal-form li{
+    padding-top: 1rem;
+}
+
+
 /*----------------Media Queries--------------*/
 @media(min-width: 768px){
     /*--------General/Base----------*/
